--- a/widget-min.html
+++ b/widget-min.html
@@ -3,7 +3,7 @@
     siblings. When this component is run from its own repo (e.g. ui tests, examples), we assume the server is started with
     'grunt depserve' (or similar server setup) to enable correct finding of bower dependencies for local runs
     See https://github.sw.ge.com/jreichenberg/grunt-dep-serve#why-do-we-need-this
---><html><head><meta charset="UTF-8"><link rel="import" href="bower_components/polymer/polymer.html">
+--><html><head><meta charset="UTF-8">
 
 
 
